--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect src/index.js",
+    "start": "nodemon src/index.js",
     "watch": "node-sass --watch src/resources/scss/ -o src/resources/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
