--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
+    "watch": "node-sass --watch src/resources/scss/ -o src/resources/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
