--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful":"prettier --single-quote --trailing-comma all --write src/**/*.{js,json,scss}",
     "start": "nodemon src/index.js",
     "watch": "node-sass --watch src/resources/scss/ -o src/resources/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +19,7 @@
     "mongoose": "^5.11.10",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.2",
+    "restify": "^8.5.1",
     "socket.io": "^3.1.0"
   },
   "devDependencies": {
